Make web font timeouts work for preloaded fonts

This patch fixes a bug where font display timeouts (100ms and 3s)
didn't start if the font resource is already started loading by
<link rel=preload>.

Bug: 835583
Change-Id: Ie464179ebcc56f2d18c99d234eadd4fc26bc1fcd
Reviewed-on: https://chromium-review.googlesource.com/1027331
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: Kunihiko Sakamoto <ksakamoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553896}
Former-commit-id: a838569157a09ebfadfd10cacc1755686b05ac40